--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html, body {
 
 #home {
     background-color: rgb(255, 255, 255);
+    padding-top: 30px;
 }
 
 #projects {
@@ -22,10 +23,31 @@ html, body {
 
 #contact {
   background-color:  rgb(255, 255, 255);
+  padding-top: 100px;
+  padding-left: 200px;
+  padding-bottom: 100px;
+  float: none;
+}
+
+
+#form {
+margin: 0;
+padding: 15px;
+
+}
+#contact-text {
+  float:right;
 }
 
 #social {
+  color: white;
   background-color: rgb(0, 0, 0);
+  padding-top: 50px;
+  padding-left: 250px;
+  padding-bottom: 50px;
+}
+#social2 {
+
 }
 
 .col-centered {
