--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 html, body {
     padding-top: 25px;
     background-color: rgb(131, 131, 131);
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 #home {
     background-color: rgb(255, 255, 255);
     padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #projects {
@@ -23,19 +25,20 @@ html, body {
 
 #contact {
   background-color:  rgb(255, 255, 255);
-  padding-top: 100px;
-  padding-left: 200px;
-  padding-bottom: 100px;
+  padding-top: 50 px;
+  padding-bottom: 50px;
   float: none;
 }
 
 
 #form {
-margin: 0;
-padding: 15px;
+padding-left: 50px;
+padding-top: 20px;
+float: left;
 
 }
 #contact-text {
+
   float:right;
 }
 
@@ -53,4 +56,8 @@ padding: 15px;
 .col-centered {
   float: none;
   margin: 0 auto;
+}
+
+.separator {
+  height: 2px;
 }
